// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelRoute component should display install modal if app found and in the registry and installed 1`] = `
<Connect(ChannelModal)
  appSlug="collect"
  channel="beta"
  dismissAction={[Function]}
  fetchApp={[Function]}
  onCurrentChannel={[Function]}
  onNotInstalled={[Function]}
  onSuccess={[Function]}
/>
`;

exports[`ChannelRoute component should display install modal if app found and in the registry even if not installed 1`] = `
<Connect(ChannelModal)
  appSlug="photos"
  channel="beta"
  dismissAction={[Function]}
  fetchApp={[Function]}
  onCurrentChannel={[Function]}
  onNotInstalled={[Function]}
  onSuccess={[Function]}
/>
`;
